--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -26,11 +26,12 @@ body, html {
 
 .sidebar {
   background-color: #FF7755;
-  grid-row: 2 / 4;
+  grid-column: 1 / 2;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2 / -1;
 }
 
 .article {
@@ -46,5 +47,13 @@ body, html {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+}
+
+/* SOLUTION */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
 }
