--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -11,7 +11,7 @@ li {
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  /* grid-template-rows: 100px repeat(auto-fit, minmax(150px, 1fr)) 50px;; */
+  gap: 4px;
 }
 
 .container div {
@@ -42,6 +42,11 @@ li {
 
 .sidebar {
   background-color: #FF7755;
+  border: 3px dotted green;
+  grid-row: 2/4;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -59,6 +64,12 @@ li {
   font-size: 16px;
   font-weight: normal;
 }
+
+.sidebar div {
+  display: grid;
+  align-items: center;
+}
+
 
 .nav {
   background-color: #FF7755;
@@ -80,6 +91,7 @@ li {
   grid-column: 2/ -1;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -93,12 +105,14 @@ li {
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  margin-bottom: 10px;
 }
 
 .card .title {
